# bdix

./: .gitignore  README.md  bdixServers.txt  links.txt  pyproject.toml  readFile.py  script.js  style.css  urls.html
.github/workflows/: build-executables.yml  python-app.yml
src/: accessibility.py  app.py  readFile.py
src/bdix/: app.py
