[project]
name = "BDIX"
version = "0.0.1"
authors = [
  { name="Avishek Dutta", email="avishekdutta@tuta.io" },
]
description = "This script check which BDIX servers works for your ISP."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests","tqdm"]


[tool.setuptools.package-data]
bdix = ["*.txt"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tyroruyk/bdix"
"Bug Tracker" = "https://github.com/tyroruyk/bdix/issues"

[project.scripts]
bdixchecker = 'bdix.app:main'
